--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             background-color: #45a049;
         }
 
-        #message {
+        #message, #ad-text {
             margin-top: 20px;
             font-size: 14px;
             color: #777;
@@ -75,6 +75,10 @@
     <div id="message">
         <p>Join the Discord to submit your runs and have a chance to get your username placed here:</p>
         <a href="https://discord.gg/3G4RrAfjk4" target="_blank">https://discord.gg/3G4RrAfjk4</a>
+    </div>
+
+    <div id="ad-text">
+        <p>(github) Current record holder: geimingbob</p>
     </div>
 
     <script>
