--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </div>
 
     <div id="ad-text">
-        <p>(github) Current record holder: geimingbob</p>
+        <p>(github) Current record holder: geimingbob (8 seconds 809 milliseconds)</p>
     </div>
 
     <script>
